--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">ClickGen</string>
     <string name="mainTitle">ClickGen</string>
+    <string name="playButton">Play</string>
+    <string name="stopButton">Stop</string>
+    <string name="pauseButton">Pause</string>
 </resources>
