--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="stopButton">Stop</string>
     <string name="pauseButton">Pause</string>
     <string name="song_volume">Song volume</string>
+    <string name="upload_file">Upload file</string>
 </resources>
