--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <string name="app_name">ClickGen</string>
-    <string name="mainTitle">ClickGen</string>
+    <string name="app_name">MetroGnome</string>
+    <string name="mainTitle">MetroGnome</string>
     <string name="playButton">Play</string>
     <string name="stopButton">Stop</string>
     <string name="pauseButton">Pause</string>
     <string name="song_volume">Song volume</string>
     <string name="upload_file">Upload file</string>
+    <string name="play_and_pause_button">Play and Pause Button</string>
+    <string name="MetroGnome">MetroGnome</string>
+    <string name="stop_button">Stop Button</string>
 </resources>
