Add spinners for click frequency and click duration (not functional spinners yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,19 @@
     <string name="upload_instructions">Start by uploading a song of your choice in the supported formats of .mp3 or .wav</string>
     <string name="please_wait">Please wait while your file is processed by our team of gnomes. This may take a few minutes.</string>
     <string name="click_frequency">Click Frequency (dB)</string>
+    <string name="click_duration">Click Duration (seconds)</string>
+    
+    <string-array name="frequencies">
+        <item>900 dB</item>
+        <item>1000 dB</item>
+        <item>1100 dB</item>
+        <item>1200 dB</item>
+    </string-array>
+
+    <string-array name="durations">
+        <item>0.25 seconds</item>
+        <item>0.5 seconds</item>
+        <item>0.75 seconds</item>
+        <item>1.0 seconds</item>
+    </string-array>
 </resources>
