--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="upload_instructions">Start by uploading a song of your choice in the supported formats of .mp3 or .wav</string>
     <string name="please_wait">Please wait while your file is processed by our team of gnomes. This may take a few minutes.</string>
     <string name="click_frequency">Frequency (Hz) :</string>
-    <string name="click_duration">Duration (seconds) :</string>
+    <string name="click_duration">Duration (sec) :</string>
     <string name="click_settings">Click settings:</string>
 
     <string-array name="frequencies">
