Add ability to save the generated click track to phone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="click_duration">Duration (sec) :</string>
     <string name="click_settings">Click settings:</string>
     <string name="new_upload_button">Upload another file</string>
+    <string name="save_file">Save click track</string>
 
     <string-array name="frequencies">
         <item>900 Hz</item>
